Linux/Scripts/Iptables/iptables.rules
# Generated by iptables-save v1.8.4 on Thu Jan 30 23:26:56 2020
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Jan 30 23:26:56 2020
# Generated by iptables-save v1.8.4 on Thu Jan 30 23:26:56 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Jan 30 23:26:56 2020
# Generated by iptables-save v1.8.4 on Thu Jan 30 23:26:56 2020
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:LOGS - [0:0]
-A INPUT -s 93.38.115.155/32 -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -p icmp -m icmp --icmp-type 13 -j DROP
-A INPUT -p icmp -m icmp --icmp-type 14 -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 93.38.115.155/32 -j ACCEPT
-A INPUT -d 93.38.115.155/32 -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m limit --limit 5/sec --limit-burst 100 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m limit --limit 5/sec --limit-burst 100 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m limit --limit 5/sec --limit-burst 100 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -j DROP
-A FORWARD -i tun0 -j ACCEPT
-A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A LOGS -m limit --limit 5/min --limit-burst 10 -j LOG
-A LOGS -j DROP
COMMIT
# Completed on Thu Jan 30 23:26:56 2020
